<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zed_acquisition</name>
  <version>0.1.0</version>
  <description>Acquire images from ZED cameras using the ZED SDK</description>
  <maintainer email="marcel.zeilinger@ait.ac.at">Marcel Zeilinger</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>angles</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>builtin_interfaces</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
